Fix styles on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,39 +1,19 @@
 $transition: transform 0.4s ease-in-out;
 
 body {
-  overflow: hidden;
-}
-
-.background {
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
-  width: 100%;
+  overflow-y: scroll;
 }
 
 img {
   max-width: 100%;
 }
 
-.heading {
-  transform-origin: top;
-  transition: $transition;
-
-  &--small {
-    transform: translateY(-20px) scale(0.5);
-  }
-}
-
-.search {
-  transition: $transition;
-
-  &--small {
-    transform: translateY(-4rem);
-  }
-}
-
 .background {
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
   transition: opacity 0.5s ease-in;
+  width: 100%;
 
   &--invisible {
     opacity: 0;
@@ -56,5 +36,22 @@ img {
       top: 0;
       width: 100%;
     }
+  }
+}
+
+.heading {
+  transform-origin: top;
+  transition: $transition;
+
+  &--small {
+    transform: translateY(-20px) scale(0.5);
+  }
+}
+
+.search {
+  transition: $transition;
+
+  &--small {
+    transform: translateY(-4rem);
   }
 }
